fix permasalahan
