# model/domain/permasalahan.go
@@ -19,3 +19,15 @@ type PermasalahanTerpilih struct {
 	KodeOpd           string
 	Tahun             string
 }
+
+type JenisMasalah string
+
+const (
+	MASALAH_POKOK JenisMasalah = "MASALAH_POKOK"
+	MASALAH       JenisMasalah = "MASALAH"
+	AKAR_MASALAH  JenisMasalah = "AKAR_MASALAH"
+)
+
+func (j JenisMasalah) IsValid() bool {
+	return j == MASALAH_POKOK || j == MASALAH || j == AKAR_MASALAH
+}
